hack/deploy/test-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-server
  name: test-server
  namespace: default
spec:
  ports:
  - name: http-1
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-server
---
apiVersion: appscode.com/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:
  - host: appscode.example.com
    http:
      paths:
      - backend:
          serviceName: test-server
          servicePort: 80
